# geo_agent

./: .env  .gitignore  MistralModelFile  README.md  create-mistral-file.sh  pyproject.toml  sample_concesiones.geojson  testing_tools.ipynb
data/CMI_WGS84_17S/: CatastroMinero_WGS84_17S_300126.sbn  CatastroMinero_WGS84_17S_300126.sbx  CatastroMinero_WGS84_17S_300126.shp  CatastroMinero_WGS84_17S_300126.shx
geo-agent/: pyvenv.cfg
geo-agent/Scripts/: activate  activate.bat  dumppdf.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py
output/jsons/: buffer_geojson.json  filtered_concessions.json  geocode_result.json
output/maps/: santa,_ancash,_perú_map.html
src/geo_agent/: main.py  tasks.py  tools.py
src/geo_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
